--- a/kutiva/static/stylesheet/kutiva/menu.css
+++ b/kutiva/static/stylesheet/kutiva/menu.css
@@ -45,3 +45,30 @@ nav ul li a .signin{
     color:white;
 
 }
+
+@media all and (max-width: 575px) {
+    .categories{
+        display: none;
+    }
+
+    h1 a{
+    text-decoration: none;
+    color: black;
+    margin-left: 120px;
+}
+}
+
+
+@media all and (max-width: 768px) {
+
+
+}
+
+@media all and (max-width: 991px) {
+
+}
+
+@media all and (max-width: 1199px) {
+
+
+}
